--- a/olfcell/olfcell_style.kv
+++ b/olfcell/olfcell_style.kv
@@ -1,5 +1,72 @@
-#:import math math
-#:import NoTransition kivy.uix.screenmanager.NoTransition
+#:import Factory kivy.factory.Factory
+#:import partial functools.partial
+#:import pretty_space base_kivy_app.utils.pretty_space
+#:import pretty_time base_kivy_app.utils.pretty_time
+
+
+<FFmpegSettingsDropdown@FlatDropDown>:
+    flat_color: app.theme.primary_text
+    flat_border_color: app.theme.divider
+    do_scroll: False, False
+    FlatSplitter:
+        size_hint: None, None
+        height: self.minimum_height
+        min_size: self.minimum_width
+        sizable_from: 'right'
+        flat_color: app.theme.accent
+        BoxLayout:
+            orientation: 'vertical'
+            size_hint_y: None
+            height: self.minimum_height
+            size_hint_min_x: self.minimum_width
+            on_kv_post: self.add_widget(app.player.ffmpeg_settings)
+            BoxLayout:
+                size_hint_y: None
+                height: self.minimum_height
+                size_hint_min_x: self.minimum_width
+                spacing: '5dp'
+                ThemedSizedLabel:
+                    text: 'Estimated FPS: {}.'.format(int(app.player.ffmpeg_player.real_rate))
+                ThemedSizedLabel:
+                    text: 'Data rate: {}.'.format(pretty_space(app.player.ffmpeg_player.data_rate, is_rate=True))
+                ThemedLabel:
+                    text: app.player.ffmpeg_player.player_summery
+                    shorten: True
+                    text_size: self.size
+
+
+<VideoRecordSettingsDropdown@FlatDropDown>:
+    flat_color: app.theme.primary_text
+    flat_border_color: app.theme.divider
+    do_scroll: False, False
+    FlatSplitter:
+        size_hint: None, None
+        height: self.minimum_height
+        min_size: self.minimum_width
+        sizable_from: 'right'
+        flat_color: app.theme.accent
+        BoxLayout:
+            orientation: 'vertical'
+            size_hint_y: None
+            height: self.minimum_height
+            size_hint_min_x: self.minimum_width
+            on_kv_post: self.add_widget(app.player.video_recorder_settings)
+            BoxLayout:
+                size_hint_y: None
+                height: self.minimum_height
+                size_hint_min_x: self.minimum_width
+                spacing: '5dp'
+                ThemedSizedLabel:
+                    text: 'Size: {}.'.format(pretty_space(app.player.video_recorder.size_recorded))
+                ThemedSizedLabel:
+                    text: 'Data rate: {}.'.format(pretty_space(app.player.video_recorder.data_rate, is_rate=True))
+                ThemedSizedLabel:
+                    text: 'Skipped: {}.'.format(app.player.video_recorder.frames_skipped)
+                ThemedLabel:
+                    text: app.player.video_recorder.recorder_summery
+                    shorten: True
+                    text_size: self.size
+
 
 <MainView>:
     orientation: 'vertical'
@@ -21,6 +88,45 @@
             Rectangle:
                 pos: self.pos
                 size: self.size
+        FlatImageToggleButton:
+            source: 'flat_play.png' if self.state == 'normal' else 'flat_stop.png'
+            hover_text: '[b]play[/b] video' if self.state == 'normal' else '[b]stop[/b] video'
+            flat_color: app.theme.accent
+            disabled: not app.player.ffmpeg_player.can_play or app.player.ffmpeg_player.play_state == 'stopping' or app.stage.playing
+            state: 'down' if app.player.ffmpeg_player.play_state == 'starting' or app.player.ffmpeg_player.play_state == 'playing' else 'normal'
+            on_state: if self.state == 'normal': app.player.stop_recording()
+            on_release: app.player.start() if self.state == 'down' else app.player.stop()
+        FlatImageButton:
+            scale_down_color: True
+            source: 'flat_dots_vertical.png'
+            flat_color: app.theme.accent
+            on_kv_post: self.ffmpeg_dropdown = Factory.FFmpegSettingsDropdown()
+            on_release: self.ffmpeg_dropdown.open(self)
+        FlatImageToggleButton:
+            source: 'flat_record.png' if self.state == 'normal' else 'flat_stop.png'
+            hover_text: 'record' if self.state == 'normal' else '[b]record[/b]'
+            flat_color: app.theme.accent
+            disabled: app.player.ffmpeg_player.play_state != 'playing' or app.stage.playing
+            state: 'down' if app.player.video_recorder.record_state == 'starting' or app.player.video_recorder.record_state == 'recording' else 'normal'
+            on_release: app.player.start_recording() if self.state == 'down' else app.player.stop_recording()
+        Widget:
+            size_hint_x: None
+            width: self.height
+            canvas:
+                Color:
+                    rgb: (1., 0, 0) if app.player.disk_used_percent >= .75 else app.theme.accent
+                Ellipse:
+                    pos: self.pos
+                    size: self.size
+                    angle_end: app.player.disk_used_percent * 360.
+                Line:
+                    circle: self.center_x, self.center_y, self.height / 2.
+        FlatImageButton:
+            scale_down_color: True
+            source: 'flat_dots_vertical.png'
+            flat_color: app.theme.accent
+            on_kv_post: self.video_dropdown = Factory.VideoRecordSettingsDropdown()
+            on_release: self.video_dropdown.open(self)
         FlatDivider:
             color: app.theme.divider
         ThemedSpinner:
@@ -90,6 +196,24 @@
                 color: app.theme.divider
             RPIPinWidget:
                 on_kv_post: app.rpi_pins = self.__self__
+    ScrollView:
+        scroll_type: ['bars']
+        bar_width: '15dp'
+        BufferImage:
+            on_kv_post: app.central_display = self.__self__
+            auto_bring_to_front: False
+            size_hint: None, None
+            on_image_size: self.size = self.image_size
+            scale_to_image: False
+
+            do_scale: False
+            do_translation: False, False
+            do_rotation: False
+            canvas.before:
+                Color:
+                    rgba: [0, 0, 0, 1]
+                Rectangle:
+                    size: self.size
 
 
 <ValveBoardWidget>:
